```plantuml
@startuml UML - Classe - Processus de recrutement

skinparam dpi 300
skinparam maxwidth 8000
skinparam maxheight 8000
skinparam shadowing false
skinparam classAttributeIconSize 0
skinparam nodesep 60
skinparam ranksep 80
skinparam linetype ortho

left to right direction


'========================================================
' ACTORS
'========================================================

class Candidate {
    - id: string
}

class User {
    - id: string
    - userRole: string
}

class Company {
    - id: string
    - name: string
    - siret: string
    - createdAt: DateTime
}

class JobOffer {
    - id: string
    - title: string
    - publicationStatus: string
}


'========================================================
' APPLICATION
'========================================================

class Application {
    - id: string
    - status: string
    - matchScore: Decimal
    - appliedAt: DateTime
    - updatedAt: DateTime
}

' Une candidature appartient à un seul candidat.
' Un candidat peut avoir plusieurs candidatures.
Candidate "1" --> "0..*" Application : applications

' Une candidature concerne une seule offre.
' Une offre peut recevoir plusieurs candidatures.
JobOffer "1" --> "0..*" Application : applications

' Une candidature est rattachée à l'entreprise qui recrute.
' L'entreprise existe indépendamment des candidatures.
Application "*" --> "1" Company : company


'========================================================
' RESUME
'========================================================

class Resume {
    - id: string
    - hasBeenAnalyzed: boolean
}

' Le CV utilisé pour une candidature est une partie
' de la candidature dans ce modèle.
' Si la candidature est supprimée, le CV associé l'est également.
Application "1" *-- "1" Resume : resume


'========================================================
' INTERVIEW
'========================================================

class Interview {
    - id: string
    - startDate: DateTime
    - minutes: int
    - status: InterviewStatus
    - title: string
    - description: string
    - url: string
    - confirm: boolean
    - rejectionReason: string
}

' Une candidature peut avoir plusieurs entretiens.
' Un entretien appartient à une seule candidature.
Application "1" *-- "0..*" Interview : interviews


'========================================================
' EMPLOYMENT OFFER
'========================================================

class EmploymentOffer {
    - id: string
    - reason: string [nullable]
    - scheduledEndDate: DateTime
    - expiredAt: DateTime
}

' Une offre d'embauche est destinée à un candidat.
' Le candidat existe indépendamment de l'offre.
Candidate "1" <-- "0..*" EmploymentOffer : receives

' L'utilisateur qui crée l'offre d'embauche
' existe indépendamment de celle-ci.
User "1" --> "0..*" EmploymentOffer : creates


' Une candidature peut aboutir à au maximum une offre d'embauche.
' L'offre d'embauche dépend de la candidature.
Application "1" *-- "0..1" EmploymentOffer : results in


'========================================================
' ENUMS
'========================================================

enum InterviewStatus {
    SCHEDULED
    IN_PROGRESS
    CLOSED
    CANCEL
    MISSED
}

@enduml
```
